# CalculatorProject

./: CMakeLists.txt  build.txt
app/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  Calculator.cpp  Calculator.h
tests/: CMakeLists.txt  CalculatorTests.cpp
